--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">My Name is Unati, a BCom Informatics students from the University of pretoria. My course merges between the Buisness world and the IT world.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">My Name is Unati, a BCom Informatics students from the University of pretoria. My course merges between the Business world and the IT world.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Is it an easy course? No. But do I enjoy it, yes!</p></div>
                 </div>
                 <!-- About Section Button-->
